<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_choose_your_country_key"
        android:title="@string/choose_your_country"
        android:dialogTitle="@string/choose_your_country"
        android:entries="@array/pref_countries_entries"
        android:entryValues="@array/pref_countries_entryValues"
        android:defaultValue="@string/pref_country_us" />

    <ListPreference
        android:key="@string/pref_category_key"
        android:title="@string/select_news_category"
        android:dialogTitle="@string/select_category"
        android:entries="@array/pref_categories_entries"
        android:entryValues="@array/pref_categories_entryValues"
        android:defaultValue="@string/pref_category_general" />

</PreferenceScreen>